1.集成qt-common测试包及相应初始化代码，打点测试代码。

--- a/gradle.properties
+++ b/gradle.properties
@@ -13,4 +13,5 @@ org.gradle.jvmargs=-Xmx4096m
 # org.gradle.parallel=true
 android.useAndroidX=true
 org.gradle.caching=true
+org.gradle.java.home=/Library/Java/JavaVirtualMachines/jdk-11.0.14.jdk/Contents/Home
 
