--- a/projects/sample/source/sample-plugin/sample-app/build.gradle
+++ b/projects/sample/source/sample-plugin/sample-app/build.gradle
@@ -68,6 +68,10 @@ dependencies {
     //Shadow Transform后业务代码会有一部分实际引用runtime中的类
     //如果不以compileOnly方式依赖，会导致其他Transform或者Proguard找不到这些类
     pluginCompileOnly 'com.tencent.shadow.core:runtime'
+
+    //implementation project(":UMCommon")
+    implementation files('libs/qt-common-1.3.3.P.aar')
+    implementation files('libs/qt-spm-1.3.3.aar')
 }
 
 preBuild.dependsOn(":sample-host-lib:jarDebugPackage")
