--- a/projects/sample/source/sample-host/build.gradle
+++ b/projects/sample/source/sample-host/build.gradle
@@ -48,6 +48,9 @@ dependencies {
     implementation 'com.tencent.shadow.dynamic:dynamic-host'
     implementation project(':sample-constant')
     implementation project(':sample-host-lib')
+    //implementation project(":UMCommon")
+    implementation files('libs/qt-common-1.3.3.P.aar')
+    implementation files('libs/qt-spm-1.3.3.aar')
 }
 
 def createCopyTask(projectName, buildType, name, apkName, inputFile, taskName) {
